# nasa-research

./: .gitignore  ProjectDiagram.drawio  README.md  docker-compose.yml  project-report.md  project-requirements.md  prometheus.yml  requirements.txt
.github/workflows/: python-app.yml
applications/lunar_data_analyzer/: Dockerfile  README.md  create_queue.Dockerfile  pyproject.toml
applications/lunar_data_analyzer/app/: main.py
applications/lunar_data_analyzer/app/core/entities/: analytics.py  document.py  mission.py
applications/lunar_data_analyzer/app/core/use_cases/: process_message.py
applications/lunar_data_analyzer/app/infrastructure/: settings.py
applications/lunar_data_analyzer/app/infrastructure/data_access/analytics/: analytics_mapper.py  analytics_model.py  analytics_repository.py
applications/lunar_data_analyzer/app/infrastructure/data_access/document/: document_mapper.py  document_model.py  document_repository.py
applications/lunar_data_analyzer/app/infrastructure/document_api_client/: arxiv_api_client.py  document_api_client.py
applications/lunar_data_analyzer/app/infrastructure/messaging/: sqs_message_consumer.py
applications/lunar_data_analyzer/init_scripts/: create_queue.py
applications/lunar_data_collector/: README.md  alembic.ini  cron.Dockerfile  pyproject.toml  service.Dockerfile
applications/lunar_data_collector/app/api/: endpoints.py
applications/lunar_data_collector/app/core/entities/: document.py  landmark.py  mission.py  sample.py  station.py
applications/lunar_data_collector/app/core/use_cases/: fetch_lunar_samples_data.py  fetch_mission_data.py  get_documents.py  get_mission_by_id.py  get_mission_names.py  get_missions.py  get_stations.py
applications/lunar_data_collector/app/infrastructure/: nasa_tech_port_api_client.py  settings.py
applications/lunar_data_collector/app/infrastructure/data_access/: mapper.py
applications/lunar_data_collector/app/infrastructure/event_messaging/: message_producer.py
applications/lunar_data_collector/app/infrastructure/nasa_lunar_samples/: nasa_lunar_samples_api_client.py  nasa_lunar_samples_responses.py
applications/lunar_data_collector/app/interface/: api_gateway.py
applications/lunar_data_collector/docker/: docker-compose.yml  service.Dockerfile
applications/lunar_data_collector/migrations/: env.py
applications/lunar_data_collector/tests/integration_tests/api/: test_endpoints.py
(+44 files in other folders)
