[tool.poetry]
name = "lunar-data-analyzer"
version = "0.1.0"
description = ""
authors = ["kylegibson15 <kylegibson15@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.35.74"
uvicorn = "^0.32.1"
awscli-local = "^0.22.0"
prometheus-client = "^0.21.1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
asyncio = "^3.4.3"
sqlmodel = "^0.0.22"
feedparser = "^6.0.11"
fastapi = "^0.115.6"
requests = "^2.32.3"
greenlet = "^3.1.1"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
