[tool.poetry]
name = "lunar-data-collector"
version = "0.1.0"
description = ""
authors = ["kylegibson15 <kylegibson15@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pytest = "^8.3.3"
httpx = "^0.27.2"
sqlmodel = "^0.0.22"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.0"
fastapi = "^0.115.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
